Fix: Correção na class bg-white para dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -71,7 +71,7 @@ html.dark-mode {
 }
 
 html.dark-mode .bg-white {
-    background-color: var(--cards-dark);
+    background-color: var(--cards-dark) !important;
 }
 
 .p-toast-message-text {
